--- a/html-themes/style.css
+++ b/html-themes/style.css
@@ -29,6 +29,11 @@ body, input {
   font-family: "Adwaita Sans"
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 2em;
+  margin-bottom: 0.5em;
+}
+
 show {
   display: flex;
   width: 60%;
@@ -50,16 +55,16 @@ element {
 }
 
 input[type=input] {
-    width: 150px;
+    width: 13em;
 }
 
 border {
-    width: 150px;
+    width: 13em;
 }
 
 button.b1 {
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0em;
   border: 0.15em;
   border-style: solid;
   border-radius: 1em;
@@ -89,7 +94,7 @@ button:disabled.b1 {
 button.b2 {
   color: var(--text-secondary-color);
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0em;
   border-width: 0.15em;
   border-style: solid;
   border-radius: 0.2em;
@@ -122,12 +127,12 @@ button:disabled.b2 {
 button.b3 {
   color: var(--text-secondary-color);
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0em;
   border-width: 0.15em;
   border-style: solid;
   border-radius: 0.4em;
   border-color: var(--text-secondary-color);
-  box-shadow: inset hsla(129, 87%, 62%, 0.6) 0 0 0.5em;
+  box-shadow: hsla(129, 87%, 62%, 0.6) 0 0 0, inset hsla(129, 87%, 62%, 0.6) 0 0 0.5em;
   padding-left: 1em;
   padding-right: 1em;
   display: inline-block;
@@ -138,6 +143,7 @@ button.b3 {
 
 button:hover:not([disabled]).b3 {
   color: var(--hover-text-color);
+  box-shadow: var(--text-secondary-color) 0 0 0.2em, inset var(--text-secondary-color) 0 0 0.2em;
 }
 
 button:disabled.b3 {
@@ -152,11 +158,11 @@ button:disabled.b3 {
 button.b4 {
   color: var(--text-secondary-color);
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0em;
   border-width: 0.1em;
   border-style: solid;
   border-color: var(--text-secondary-color);
-  box-shadow: inset hsla(129, 87%, 62%, 0.6) 0 0 0.5em;
+  box-shadow: hsla(129, 87%, 62%, 0.6) 0 0 0, inset hsla(129, 87%, 62%, 0.6) 0 0 0.5em;
   padding-left: 1em;
   padding-right: 1em;
   display: inline-block;
@@ -167,6 +173,7 @@ button.b4 {
 
 button:hover:not([disabled]).b4 {
   color: var(--hover-text-color);
+  box-shadow: var(--text-secondary-color) 0 0 0.2em, inset var(--text-secondary-color) 0 0 0.2em;
 }
 
 button:disabled.b4 {
@@ -178,37 +185,10 @@ button:disabled.b4 {
 }
 
 
-input[type=input].input1 {
-  color: var(--text-color);
-  background-color: var(--bg-color-2);
-  font-size: 1.1em;
-  margin: 0.2em 0.2em;
-  border: 0.15em;
-  border-style: solid;
-  border-radius: 1em;
-  border-color: var(--text-secondary-color);
-  padding-left: 1em;
-  padding-right: 1em;
-  display: inline-block;
-  outline: none;
-}
-
-input[type=input].input1:focus {
-  color: var(--text-color);
-  border-color: var(--hover-text-color);
-}
-
-label.input1 {
+input[type=input].input2, input[type=password].input2 {
   color: var(--text-color);
   font-size: 1.1em;
-  display: inline-block;
-}
-
-
-input[type=input].input2 {
-  color: var(--text-color);
-  font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0.0em;
   border-width: 0.15em;
   border-style: solid;
   border-radius: 0.2em;
@@ -222,11 +202,11 @@ input[type=input].input2 {
   outline: none;
 }
 
-input[type=input].input2:focus {
+input[type=input].input2:focus, input[type=password].input2:focus {
   box-shadow: var(--text-secondary-color) 0 0 0.2em, inset var(--text-secondary-color) 0 0 0.2em;
 }
 
-input[type=input].input2:disabled {
+input[type=input].input2:disabled, input[type=password].input2:disabled {
   text-shadow: currentColor 0 0 0.1em;
   box-shadow: currentColor 0 0 0.1em, inset currentColor 0 0 0.1em;
   border-color: currentColor;
@@ -241,10 +221,10 @@ label.input2 {
 }
 
 
-input[type=input].input3 {
+input[type=input].input3, input[type=password].input3 {
   color: var(--text-color);
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0.0em;
   border-width: 0.15em;
   border-style: solid;
   border-radius: 0.4em;
@@ -258,11 +238,11 @@ input[type=input].input3 {
   outline: none;
 }
 
-input[type=input].input3:focus {
+input[type=input].input3:focus, input[type=password].input3:focus {
   box-shadow: var(--text-secondary-color) 0 0 0.2em, inset var(--text-secondary-color) 0 0 0.2em;
 }
 
-input[type=input].input3:disabled {
+input[type=input].input3:disabled, input[type=password].input3:disabled {
   text-shadow: currentColor 0 0 0.1em;
   box-shadow: inset currentColor 0 0 0.1em;
   border-color: currentColor;
@@ -277,10 +257,10 @@ label.input3 {
 }
 
 
-input[type=input].input4 {
+input[type=input].input4, input[type=password].input4 {
   color: var(--text-color);
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0.0em;
   border-width: 0.1em;
   border-style: solid;
   border-color: var(--text-secondary-color);
@@ -293,11 +273,11 @@ input[type=input].input4 {
   outline: none;
 }
 
-input[type=input].input4:focus {
+input[type=input].input4:focus, input[type=password].input4:focus {
   box-shadow: var(--text-secondary-color) 0 0 0.2em, inset var(--text-secondary-color) 0 0 0.2em;
 }
 
-input[type=input].input4:disabled {
+input[type=input].input4:disabled, input[type=password].input4:disabled {
   text-shadow: currentColor 0 0 0.1em;
   box-shadow: inset currentColor 0 0 0.1em;
   border-color: currentColor;
@@ -312,73 +292,10 @@ label.input4 {
 }
 
 
-border.float-input1  {
-  color: var(--text-color);
-  font-size: 1.1em;
-  margin: 0.2em 0.2em;
-  border-width: 0.15em;
-  border-style: solid;
-  border-radius: 2em;
-  border-color: var(--text-secondary-color);
-  padding-left: 1em;
-  padding-top: 1.5em;
-  padding-right: 1em;
-  display: inline-block;
-  background-color: var(--bg-color);
-  transition: all 0.3s;
-  position: relative;
-}
-
-input[type=input].float-input1 {
-  color: var(--text-color);
-  font-size: 1em;
-  padding: 0;
-  margin: 0;
-  display: inline-block;
-  background-color: #00000000;
-  transition: all 0.3s;
-  outline: none;
-  border:none;
-}
-
-input[type=input].float-input1::placeholder {
-    opacity: 0;
-}
-
-input[type=input].float-input1:disabled {
-  text-shadow: currentColor 0 0 0.1em;
-  cursor: default;
-  color: var(--text-disabled-color);
-}
-
-border.float-input1:focus-within > label.float-input1,
-label.float-input1:has(+ input.float-input1:not(:placeholder-shown)) {
-  transform:translateY(-1.5em);
-  color: var(--text-secondary-color);
-  font-size: 0.8em;
-}
-
-label.float-input1 {
-  color: var(--text-color);
-  font-size: 1em;
-  position: absolute;
-  cursor: text;
-  width:inherit;
-  max-width:inherit;
-  overflow: clip;
-  text-wrap: nowrap;
-  text-overflow: ellipsis;
-  transition-duration:300ms;
-  transform:translateY(-0.75em);
-  padding: 0;
-  margin: 0;
-}
-
-
 border.float-input2  {
   color: var(--text-color);
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0.0em;
   border-width: 0.15em;
   border-style: solid;
   border-radius: 0.2em;
@@ -448,7 +365,7 @@ label.float-input2 {
 border.float-input3  {
   color: var(--text-color);
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0.0em;
   border-width: 0.15em;
   border-style: solid;
   border-radius: 0.4em;
@@ -518,7 +435,7 @@ label.float-input3 {
 border.float-input4  {
   color: var(--text-color);
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0.0em;
   border-width: 0.1em;
   border-style: solid;
   border-color: var(--text-secondary-color);
@@ -587,7 +504,7 @@ label.float-input4 {
 border.float-input5  {
   color: var(--text-color);
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0.0em;
   border-width: 0 0 0.1em 0;
   border-style: solid;
   border-color: var(--text-secondary-color);
@@ -650,7 +567,7 @@ label.float-input5 {
 border.float-input6  {
   color: var(--text-color);
   font-size: 1.1em;
-  margin: 0.2em 0.2em;
+  margin: 0.2em 0.0em;
   border-width: 0.1em;
   border-style: solid;
   border-color: var(--text-secondary-color);
@@ -722,4 +639,28 @@ label.float-input6 {
   padding: 0;
   margin: 0;
   position: absolute;
+}
+
+div.form-line {
+    display: block;
+    margin-top: 0.5em;
+}
+
+form.login-form {
+    width: 300px;
+}
+
+div.form-line > label {
+    display: block;
+}
+
+div.form-line > input {
+    display: block;
+    width: 100%;
+    padding-bottom: 0.4em;
+    padding-top: 0.4em;
+}
+
+div.form-line:has(button) {
+    text-align: right;
 }
