--- a/html-themes/style.css
+++ b/html-themes/style.css
@@ -664,3 +664,16 @@ div.form-line > input {
 div.form-line:has(button) {
     text-align: right;
 }
+
+div.login-title {
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
+    text-align: center;
+}
+
+form.login-form {
+    border-width: 0.2em;
+    border-style: solid;
+    border-color: var(--text-secondary-color);
+    padding: 1em;
+}
