--- a/html-themes/style.css
+++ b/html-themes/style.css
@@ -62,17 +62,18 @@ border {
     width: 13em;
 }
 
-button.b1 {
-  font-size: 1.1em;
-  margin: 0.2em 0em;
-  padding-left: 1em;
-  padding-right: 1em;
-  color: var(--text-secondary-color);
-  text-decoration: none;
+button {
   display: inline-block;
   cursor: pointer;
-  background-color: var(--bg-color); 
   transition: all 0.3s;
+}
+button:disabled {
+  cursor: default;
+}
+
+button.b1 {
+  color: var(--text-secondary-color);
+  background-color: var(--bg-color);
 }
 
 button:hover:not([disabled]).b1 {
@@ -81,20 +82,13 @@ button:hover:not([disabled]).b1 {
 
 button:disabled.b1 {
   color: var(--bg-color);
-  cursor: default;
 }
 
 button.b2 {
   color: var(--text-secondary-color);
   font-size: 1.1em;
-  margin: 0.2em 0em;
-  padding-left: 1em;
-  padding-right: 1em;
   text-shadow: currentColor 0 0 0.15em;
-  display: inline-block;
-  cursor: pointer;
   background-color: var(--bg-color);
-  transition: all 0.3s;
 }
 
 button:hover:not([disabled]).b2 {
@@ -102,7 +96,6 @@ button:hover:not([disabled]).b2 {
 }
 
 button:disabled.b2 {
-  cursor: default;
   color: var(--text-disabled-color);
 }
 
@@ -110,11 +103,6 @@ button:disabled.b2 {
 button.b3 {
   color: var(--text-secondary-color);
   font-size: 1.1em;
-  margin: 0.2em 0em;
-  padding-left: 1em;
-  padding-right: 1em;
-  display: inline-block;
-  cursor: pointer;
   background-color: var(--bg-color);
   transition: all 0.3s;
 }
@@ -124,20 +112,13 @@ button:hover:not([disabled]).b3 {
 }
 
 button:disabled.b3 {
-  cursor: default;
   color: var(--text-disabled-color);
 }
 
 button.b4 {
   color: var(--text-secondary-color);
   font-size: 1.1em;
-  margin: 0.2em 0em;
-  padding-left: 1em;
-  padding-right: 1em;
-  display: inline-block;
-  cursor: pointer;
   background-color: var(--bg-color);
-  transition: all 0.3s;
 }
 
 button:hover:not([disabled]).b4 {
@@ -145,7 +126,6 @@ button:hover:not([disabled]).b4 {
 }
 
 button:disabled.b4 {
-  cursor: default;
   color: var(--text-disabled-color);
 }
 
@@ -154,8 +134,6 @@ input[type=input].input2, input[type=password].input2 {
   color: var(--text-color);
   font-size: 1.1em;
   margin: 0.2em 0.0em;
-  padding-left: 1em;
-  padding-right: 1em;
   display: inline-block;
   background-color: var(--bg-color);
   transition: all 0.3s;
@@ -163,7 +141,6 @@ input[type=input].input2, input[type=password].input2 {
 }
 
 input[type=input].input2:disabled, input[type=password].input2:disabled {
-  cursor: default;
   color: var(--text-disabled-color);
 }
 
@@ -178,8 +155,6 @@ input[type=input].input3, input[type=password].input3 {
   color: var(--text-color);
   font-size: 1.1em;
   margin: 0.2em 0.0em;
-  padding-left: 1em;
-  padding-right: 1em;
   display: inline-block;
   background-color: var(--bg-color);
   transition: all 0.3s;
@@ -191,7 +166,6 @@ input[type=input].input3:focus, input[type=password].input3:focus {
 }
 
 input[type=input].input3:disabled, input[type=password].input3:disabled {
-  cursor: default;
   color: var(--text-disabled-color);
 }
 
@@ -206,8 +180,6 @@ input[type=input].input4, input[type=password].input4 {
   color: var(--text-color);
   font-size: 1.1em;
   margin: 0.2em 0.0em;
-  padding-left: 1em;
-  padding-right: 1em;
   display: inline-block;
   background-color: var(--bg-color);
   transition: all 0.3s;
@@ -215,7 +187,6 @@ input[type=input].input4, input[type=password].input4 {
 }
 
 input[type=input].input4:disabled, input[type=password].input4:disabled {
-  cursor: default;
   color: var(--text-disabled-color);
 }
 
@@ -612,6 +583,8 @@ form.login-form1 {
  */
 
 .border-1 {
+  padding-left: 1em;
+  padding-right: 1em;
   border: 0.15em;
   border-style: solid;
   border-radius: 1em;
@@ -619,6 +592,8 @@ form.login-form1 {
 }
 
 .border-1-hover:hover:not([disabled]) {
+  padding-left: 1em;
+  padding-right: 1em;
   border: 0.15em;
   border-style: solid;
   border-radius: 1em;
@@ -626,6 +601,8 @@ form.login-form1 {
 }
 
 .border-1-focus:focus:not([disabled]) {
+  padding-left: 1em;
+  padding-right: 1em;
   border: 0.15em;
   border-style: solid;
   border-radius: 1em;
@@ -633,6 +610,8 @@ form.login-form1 {
 }
 
 .border-1-disabled:disabled {
+  padding-left: 1em;
+  padding-right: 1em;
   background: var(--text-secondary-color);
 }
 
@@ -643,6 +622,8 @@ form.login-form1 {
 .border-2 {
   border-width: 0.15em;
   border-style: solid;
+  padding-left: 1em;
+  padding-right: 1em;
   border-radius: 0.2em;
   border-color: var(--text-secondary-color);
   box-shadow: var(--text-secondary-color) 0 0 0.15em, inset var(--text-secondary-color) 0 0 0.15em;
@@ -677,6 +658,8 @@ form.login-form1 {
 .border-3 {
   border-width: 0.15em;
   border-style: solid;
+  padding-left: 1em;
+  padding-right: 1em;
   border-radius: 0.4em;
   border-color: var(--text-secondary-color);
   box-shadow: hsla(129, 87%, 62%, 0.6) 0 0 0, inset hsla(129, 87%, 62%, 0.6) 0 0 0.5em;
@@ -711,6 +694,8 @@ form.login-form1 {
 .border-4 {
   border-width: 0.1em;
   border-style: solid;
+  padding-left: 1em;
+  padding-right: 1em;
   border-color: var(--text-secondary-color);
   box-shadow: hsla(129, 87%, 62%, 0.6) 0 0 0, inset hsla(129, 87%, 62%, 0.6) 0 0 0.5em;
 }
@@ -733,4 +718,17 @@ form.login-form1 {
   text-shadow: currentColor 0 0 0.1em;
   box-shadow: currentColor 0 0 0.1em, inset currentColor 0 0 0.1em;
   border-color: currentColor;
+}
+
+
+/*
+ * Font Sizes
+ */
+
+.text-base {
+    font-size: 1rem;
+}
+
+.text-l {
+    font-size: 1.25rem;
 }
