--- a/html-themes/style.css
+++ b/html-themes/style.css
@@ -55,7 +55,7 @@ element {
   flex: 1;
 }
 
-input[type=text], input[type=password], input[type=input] {
+input[type=text], input[type=password], input[type=input], input[type=email], input[type=number], input[type=url], input[type=tel], input[type=search], textarea {
   outline: none;
 }
 
